--- a/public/test.html
+++ b/public/test.html
@@ -410,6 +410,8 @@ attrSel.addEventListener("change", () => {
     attrSel.dispatchEvent(new Event("change"));
   });
 
+
+//样式代码部分
   let currentStyleAttr = '';
 let styleTableBody = document.querySelector("#style-table tbody");
 let usedStyleTypes = {}; // 记录当前属性已经选择的样式类型
